c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/var_decl_two_tags.c
/* Structure tag must be a single identifier */

struct x y {
    int a;
};